Computación calculo proposicional | Lógica

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
@@ -72,8 +72,8 @@ Un lenguaje en este contexto no es más que un conjunto de expresiones, mas conc
 Usualmente, esta teoría consiste de un conjunto de ***Reglas de Inferencia***. Cada una de estas reglas de inferencia es un patrón de argumentación, o de razonamiento reconocido como correcto. Es posible que la Teoría de Prueba y la Semántica no se adecuen.
 Si la teoría de prueba solo infiere respuestas correctas en acuerdo con la Semántica se dice que es ***sana, sensata o sólida***. Pero si la teoría de pruebas genera todas las respuestas correctas se dice que es ***completa***.
 
->[!info] Aclaración sobre la Sensatez y Completitud de las Teorías de Prueba
->Aquellas teorías de pruebas son sensatas, no pueden ser completas y aquellas que son completas son pueden ser sensatas. 
+>[!info] Sensatez y Completitud de las Teorías de Prueba
+>Las teorías de pruebas pueden ser sensatas, pero no completas o  completas pero no sensatas o inclusive ser tanto completas como sensatas.
 
 Formalmente decimos que una teoría formal $T$ esta constituido por:
 
