--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proporsional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proporsional.md
@@ -49,7 +49,7 @@ Los conectivos proporcionales son funciones lógicas que tomas argumentos del co
 >[!tldr] Conjunto Suficiente de Colectivos
 >Un conjunto de conectivos $S$ será un conjunto suficiente de conectivos, si toda función lógica puede ser expresado en términos de los conectivos del conjunto $S$.
 >1. **Teorema**: $\{¬, \wedge, \vee\}$ es un conjunto suficiente de conectivos.
->2. **Teorema**: $\{ \rightarrow, ¬\}$ es un conjunto suficiente de conectivos.
+>2. **Teorema**: $\{ \rightarrow, ¬\}$ es un conjunto suficiente de conectivos. ^conjunto-suficiente-conectivos
 
 Una fórmula bien formada es ***satisfacible*** si en verdadera bajo alguna interpretación. Si dicha fórmula bien formada es siempre verdadera bajo todas sus posibles interpretaciones, dicha fórmula es ***lógicamente válida*** o tautológica. Por otro lado, una fórmula bien formada es ***insatisfacible*** o una contradicción si es falsa bajo todas sus interpretaciones posibles, este tipo de fórmulas se denota con el símbolo $\perp$.
 Para verificar si una sentencia lógicamente válida es ***decidible***, solo hay que ver si en la tabla de verdad da $V$ para todas sus combinaciones. Una forma de hacerlo es construir la tabla de verdad y corroborar que se cumpla la condición, aunque existen formas más económicas para decidir si una fórmula bien formada es una tautología o no, el proceso empieza por intentar hacer falsa a la fórmula bien formada. Para ello se observa cuál es el conectivo principal y a partir de él se ve como es posible, de acuerdo a la tabla de verdad del conectivo, como asignar valores de verdad que la hagan falsa.
