Capa de enlace de datos done | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Medios de Transmision y Hardware de Red.md
@@ -1,4 +1,4 @@
-En los sistemas de transmisión de datos, el medio de transmisión es el camino físico entre el transmisor y el receptor. Estos medios se pueden clasificar en ***guiados***, donde las ondas electromagnéticas se transmiten a través de un medio sólido, como por ejemplo un par trenzado de cobre, un cable coaxial o una fibra óptica. Y los ***no guiados***, donde la transmisión se realiza de forma inalámbrica a través de la atmósfera, el espacio exterior o el agua.
+En los sistemas de transmisión de datos, el medio de transmisión es el camino físico entre el transmisor y el receptor. Estos medios se pueden clasificar en ***guiados***, donde las ondas electromagnéticas se transmiten a través de un medio sólido, como por ejemplo un par trenzado de cobre, un cable coaxial o una fibra óptica. Y los ***no guiados***, donde la transmisión se realiza de forma inalámbrica a través de la atmósfera, el espacio exterior o el agua. Nosotros solo nos enfocaremos en los médios guiados porque son los que más cubre la materia.
 Las características y calidad de la transmisión están determinadas tanto por el tipo de señal como por las características del medio. Generalmente, en el diseño de sistemas de transmisión es deseable que tanto la distancia como la velocidad de transmisión sean lo más grande posible. Hay una serie de factores relacionados con el medio de transmisión y con la señal que determinan tanto la distancia como la velocidad de transmisión, tales como el ancho de banda, las dificultades en la transmisión, la interferencia y el número de receptores.
 
 ## Medios Guiados
@@ -47,3 +47,24 @@ La longitud de onda de la luz utilizada influye en el tipo de transmisión y en 
 >[!tldr] Atenuación de las Señales en la Fibra Óptica
 >La atenuación de la señal en las fibras ópticas se debe principalmente a la ***absorción*** y la ***dispersión***. La absorción implica la pérdida de energía de la luz debido al material de la fibra, mientras que la dispersión ocurre cuando la luz cambia de dirección al interactuar con pequeñas impurezas o irregularidades en el medio. La elección adecuada de materiales y longitudes de onda ayuda a minimizar estos efectos y optimizar el rendimiento de la transmisión.
 
+## Hardware para Redes de Área Local
+
+Al momento de realizar el cableado e instalación de una red en un edificio, existen ciertos estándares que definen como realizar dicho cableado y qué medios de transmisión utilizar para cada caso en particular. Si bien todas estas especificaciones van de la mano de Ethernet, para realizar una instalación de este tipo de red también se utiliza hardware específico, como lo pueden ser repetidores, puentes, computadores y hasta enrutadores.
+
+### Repetidores
+
+El principal problema tanto para los medios guiados como no guiados es el alcance que estos tienen, debido principalmente a la atenuación de las señales analógicas. Los repetidores son dispositivos de hardware, que se encuentran en el primer nivel del modelo OSI, capas de amplificar la señal entre dos segmentos de cables, permitiendo así la extensión de la señal a mayores distancia. Al ser un dispositivo ubicado en la capa física el mismo no entiende de tramas ni direcciones físicas, es un dispositivo que se encarga únicamente de replicar y amplificar señales eléctricas.
+
+### Puentes
+
+Los puentes son dispositivos que sirve para interconectar segmentos de red formando una sola subred administrada por el mismo puente. Son piezas de hardware que tienen CPU, memoria y dos interfaces de red, situándose así en el segundo nivel del modelo OSI, la principal diferencia entre los puentes y los repetidores es que los puentes utilizan una interfaz de red y por eso son capaces de entender y manejar tramas, realizando algunas tareas como el filtraje de tráfico, el control de error de las tramas y además determinan a qué segmento de la red se debe ser enviada una trama.
+La motivación detrás del uso de los puentes es que también ayudan a extender la longitud de la red y por ende el número de nodos que la constituyen, permiten reducir el cuello de botella producido por tener muchos nodos generando tráfico sobre una sola línea, ya que los puentes pueden leer el campo de dirección de destino de las tramas, descartando aquellas tramas cuya dirección de destino y de origen sea el mismo segmento. Además de poder llevar un control de que estaciones están conectadas a la red local y a qué segmento pertenecen.
+
+### Conmutadores
+
+Los conmutadores o switches son dispositivos que soporta múltiples segmentos y realiza el intercambio de tramas entre ellas mediante un bus de muy alta velocidad. A diferencia de los hubs y los switches toman decisiones basándose en las direcciones MAC evitando así la saturación del medio, se puede decir que switch administra de forma inteligente el ancho de banda. El propósito de este dispositivo es concentrar la conectividad, haciendo que la transmisión de datos sea más eficiente, conmutando las tramas desde las interfaces de entrada hacia los puertos de salida, dando a cada puerto el ancho de banda total.
+Tanto los conmutadores como los puentes tiene la capacidad de construir de forma automática sus tablas de direccionamiento, evitando así que los administradores y/o usuarios tengan que configurar el dispositivo de forma manual.
+Si bien tanto el switch como el puente pertenecen al segundo nivel del modelo OSI y comparten muchas similitudes, la principal diferencia es que los conmutadores realizan la conmutación de las tramas por hardware otorgando todo el ancho de banda a cada host para realizar la transmisión de las tramas evitando al máximo las colisiones, lo que permite tener muchos más nodos conectados de forma simultánea.
+
+>[!tldr] Enrutadores
+>Los routers son dispositivos de hardware que desempeñan funciones de nivel superior en la red. Ubicados en el tercer nivel del modelo OSI, son responsables de realizar el enrutamiento de paquetes y optimizar su dirección. Además, gestionan el control y filtrado del tráfico, mantienen tablas de routers adyacentes y de las redes LAN dentro de la red, y permiten segmentar la red en subredes.
