--- a/4º Año/Comunicaciones y Redes/Veremos/Administracion de Redes/1. Administracion de Redes.md
+++ b/4º Año/Comunicaciones y Redes/Veremos/Administracion de Redes/1. Administracion de Redes.md
@@ -7,7 +7,7 @@ Implica también la seguridad del acceso a estos recursos y de la información c
 - **Gestión de la configuración**, tareas rutinarias de cambios en los parámetros de funcionamiento de los elementos que configuran la red, mantener el inventario de todos los elementos que conforman la red, realizar altas y bajas de usuarios y asegurar que el tráfico se mantiene conforme a lo planificado.
 - **Gestión del rendimiento**, incluye todas las funciones necesarias para evaluar el comportamiento de los objetos gestionados y de la red en su conjunto, incluidos los medios de transmisión. Con base en el resultado se determina la carga real de tráfico (throughput), la disponibilidad y el tiempo de respuesta, y se puede prever la congestión de determinados nodos o rutas, adelantándose a que llegue a suceder y que la demanda de los usuarios se vea insatisfecha.
 - **Gestión de costos**, funciones relativas a la administración de los recursos de la red y el cargo que por su uso hay que hacer a los usuarios.
-- Gestión de la seguridad, esencial para mantener la integridad y confidencialidad de los datos, protegiendo frente a la intrusión por terceros. (control de firewalls, claves, VPNs, etc).
+- **Gestión de la seguridad**, esencial para mantener la integridad y confidencialidad de los datos, protegiendo frente a la intrusión por terceros. (control de firewalls, claves, VPNs, etc).
 
 ### Protocolo y Arquitectura de Administración SNMP
 
