Extra de calculo | Calculo

--- a/4º Año/Calculo Numerico/Unidad 5/1. Derivacion Numerica.md
+++ b/4º Año/Calculo Numerico/Unidad 5/1. Derivacion Numerica.md
@@ -98,6 +98,12 @@ En términos prácticos primero se calcula una aproximación inicial con nuestro
 >	- **Costo Computacional**: La extrapolación de Richardson requiere cálculos adicionales, ya que implica evaluar la función en más puntos. Esto puede aumentar el costo computacional, especialmente si la función es costosa de evaluar.
 >	- **Elección de $h$**: Aunque la técnica mejora la precisión, es crucial elegir un valor de $h$ adecuado para evitar que el error de redondeo domine cuando $h$ es muy pequeño.
 
+>[!caution] Fórmula Utilizada en Clase
+>Cuando aplicamos la extrapolación de Richarson en clases utilizamos solo una en concreto, la cual es la siguiente:
+>$$
+>R(h) = \frac{4 D\left(\frac{h}{2}\right) - D(h)}{3}
+>$$
+
 ### Elección del Método
 
 Cuando decides qué método de derivación numérica aplicar, es importante considerar varios factores clave para asegurar que el método elegido sea el más adecuado para la situación específica. Aquí tienes algunas de las consideraciones fundamentales:
