Completando medio inalambricos | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Medios de Transmision y Hardware de Red.md
@@ -47,6 +47,35 @@ La longitud de onda de la luz utilizada influye en el tipo de transmisión y en 
 >[!tldr] Atenuación de las Señales en la Fibra Óptica
 >La atenuación de la señal en las fibras ópticas se debe principalmente a la ***absorción*** y la ***dispersión***. La absorción implica la pérdida de energía de la luz debido al material de la fibra, mientras que la dispersión ocurre cuando la luz cambia de dirección al interactuar con pequeñas impurezas o irregularidades en el medio. La elección adecuada de materiales y longitudes de onda ayuda a minimizar estos efectos y optimizar el rendimiento de la transmisión.
 
+## Medios no Guiados
+
+En el estudio de las comunicaciones inalámbricas se consideran tres intervalos de frecuencias:
+
+1. **Microondas (1 GHz a 40 GHz)**: Adecuadas para enlaces punto a punto y comunicaciones satelitales debido a sus señales son altamente direccionales.
+2. **Ondas de radio (30 MHz a 1 GHz)**: Idóneas para aplicaciones omnidireccionales.
+3. **Infrarrojo (3 × 10¹¹ Hz a 2 × 10¹⁴ Hz)**: Utilizado para conexiones locales punto a punto y aplicaciones multipunto en áreas confinadas, como en una habitación.
+
+En los medios no guiados, la transmisión y recepción se realizan mediante antenas. Una antena se puede definir como un conductor eléctrico utilizado para radiar o captar energía electromagnética, al momento de la transmisión la energía eléctrica producida por el transmisor se convierte en energía electromagnética irradiándose al entorno cercano. Los receptores toman esta energía electromagnética y la convierten en energía eléctrica.
+
+>[!tldr] Antenas Parabólicas de Reflexión
+>Un tipo muy importante de antenas son las denominadas antenas parabólicas de reflexión, las cuales se utilizan en aplicaciones de microondas terrestres y satelitales. Ya que, debido a su forma se verifica la siguiente propiedad: las ondas reflejadas en una parábola y que provengan de cualquier fuente de energía electromagnética que esté situada en su foco, seguirán trayectorias paralelas al eje de la parábola.
+
+La ***ganancia de una antena*** es una medida de su direccionalidad. Podemos definir dicha ganancia como la potencia de salida, en esa dirección, comparada con la potencia transmitida en cualquier dirección por una antena omnidirecional ideal.
+
+### Microondas Terrestres
+
+La antena más común en las microondas es la parabólica tipo plato, que posee un diámetro típico de unos 3 metros. Esta antena se fija rígidamente de forma tal que el haz debe estar perfectamente enfocado siguiendo la trayectoria visual hacia la antena receptora. Para conseguir transmisiones a larga distancia, se concatenan distintos enlaces punto a punto entre antenas situadas en torres adyacentes, hasta cubrir la distancia deseada.
+Este tipo de antenas operan dentro del rango de frecuencias de las microondas y mientras mayor sea la frecuencia mayor será el ancho de banda y por tanto mayor será la velocidad de transmisión. Este tipo de medios se utiliza principalmente para servicios de telecomunicaciones de larga distancia, actuando como una alternativa a medios como el cable coaxial y la fibra óptica.
+
+>[!tldr] Microondas Satelitales
+>Un satélite de comunicaciones actúa como una estación que retransmite microondas, enlazando dos o más estaciones base en tierra. Recibe señales en una banda de frecuencia, las amplifica o repite, y luego las retransmite en otra banda de frecuencia. Los satélites geoestacionarios operan en bandas de frecuencias llamadas ***transpondedores***.
+>Para que un satélite de comunicaciones funcione con eficacia, generalmente se exige que se mantenga en una órbita geoestacionaria, de lo contrario, no estaría constantemente alineado con las estaciones base. Adicionalmente, si dos satélites utilizaran la misma banda de frecuencias y estuvieran suficientemente próximos podrían interferirse mutuamente. Para evitar esto, los estándares actuales exigen una separación mínima que varía de acuerdo al rango de frecuencias sobre las que operan.
+
+### Ondas de Radio
+
+A diferencia de las microondas, las ondas de radio se caracterizan por ser omnidireccionales, esto hace que este tipo de ondas no necesiten de antenas parabólicas ni que dichas antenas estén asiladas sobre una plataforma para estar alineadas.
+A diferencia de las microondas, las ondas de radio son menos afectadas por la lluvia y sufren menos atenuación debido a su mayor longitud de onda. Sin embargo, un problema común es la interferencia por multitrayectorias, causada por reflexiones en la superficie terrestre, el mar u otros objetos, que puede provocar la aparición de imágenes dobles en receptores de TV.
+
 ## Hardware para Redes de Área Local
 
 Al momento de realizar el cableado e instalación de una red en un edificio, existen ciertos estándares que definen como realizar dicho cableado y qué medios de transmisión utilizar para cada caso en particular. Si bien todas estas especificaciones van de la mano de Ethernet, para realizar una instalación de este tipo de red también se utiliza hardware específico, como lo pueden ser repetidores, puentes, computadores y hasta enrutadores.
