[Refactor] correction unit 2.2

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
@@ -3,8 +3,7 @@ Recordemos entonces que un [[1. Calculo Proporsional#^conjunto-suficiente-conect
 >[!tldr] Máquinas de Inferencia y Equivalencia
 >Dada una semántica $\vDash P$, si poseemos dos máquinas de inferencia $\vdash_1 P$ y $\vdash_2 P$. Si ambas máquinas son sensatas y completas sobre la semántica $\vDash P$, entonces $\vdash_1 P$ y $\vdash_2 P$ son equivalentes.
 
-Al deducir se procesan símbolos. Por esta razón, es importante encontrar formas
-eficientes de realizar este proceso de manera automática. Aunque la tarea es posible de realizar en el esquema planteado anteriormente, es difícil implementar la una máquina de inferencia con los procedimientos vistos hasta el momento. A continuación, veremos una manera de realizar deducciones que es más sencilla de automatizar.
+Al deducir se procesan símbolos. Por esta razón, es importante encontrar formas eficientes de realizar este proceso de manera automática. Aunque la tarea es posible de realizar en el esquema planteado anteriormente, es difícil implementar la una máquina de inferencia con los procedimientos vistos hasta el momento. A continuación, veremos una manera de realizar deducciones que es más sencilla de automatizar.
 
 ## Computación para el Cálculo Proposicional
 
@@ -14,7 +13,7 @@ La computación en el cálculo proposicional se basará en la eliminación de **
 - $\tau$: Representa todas las fórmulas bien formadas del tipo $¬A \vee A$.
 - $\Box$: Representa todas las fórmulas bien formadas del tipo $¬A \wedge A$.
 
-En este caso cada fórmula bien formada se expresará en un formato que solo usa los conectivos $\{ ¬,\wedge ,\vee \}$, denominado ***forma normal conjuntiva reducida***.
+En este caso cada fórmula bien formada se expresará en un formato que solo usa los conectivos $\{ ¬,\wedge ,\vee \}$, denominado ***forma normal conjuntiva reducida*** **(FNCR)**.
 Toda fórmula bien formada del cálculo proposicional puede ser reescrita, en forma equivalente, utilizando solo el conjunto de conectivos antes mostrado, ya que este es un conjunto suficiente de conectivos. Una forma normal es un “formato” estándar al que se puede llegar desde una fórmula bien formada arbitraria por medio de un proceso algorítmico. Si no se repiten letras proposicionales dentro de las cláusulas se dice que se tiene una Forma Normal Conjuntiva Reducida (FNCR).
 Una fórmula bien formada que usa los conectivos $\{ ¬,\wedge ,\vee \}$ está en forma normal conjuntiva si:
 
