Porque las WLAN son tan complicadas loco | Redes

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
@@ -1,4 +1,3 @@
-
 Un ***argumento*** puede definirse como una *secuencia de sentencias*, una de las cuales es la conclusión a favor de la que se argumenta, y las otras son las premisas, o razones para aceptar la conclusión. Las sentencias que componen la secuencia argumentativa tienen la característica de expresar algo, es decir son **declarativas**, y tiene la propiedad de ser verdadera o falsa.
 
 >[!tldr] Proposiciones
@@ -126,13 +125,13 @@ Sea $S$ un conjunto de formulas bien formadas y sea $P$ una formula bien formada
 2. Para $1 \leq i \leq n$, $P_i$ es una instancia de un axioma, o bien $P_i$ es una formula bien formada perteneciente a $S$ o bien $P_i$ es una consecuencia directa de algunas $P_j$ con $j < i$, necesarios para la aplicación de algunas de las reglas de inferencia de $T$.
 
 El conjunto $S$, se llama ***conjunto de hipótesis***, la secuencia $P_1, P_2, \cdots, P_n$ se llama ***derivación o prueba*** de $P$ a partir de $S$ en $T$.
-Sea $P$ una formula bien formada de una teoría $T$, entonces si $P$, puede ser deducible del conjunto vacío ,denotado $\vdash P$, se dice que $P$ es un teorema en $T$ o que es demostrable en $T$. Es decir, en la secuencia de $P_i$ sólo aparecen instancias de axiomas o son el resultado de aplicación de reglas de inferencia de $T$.
+Sea $P$ una fórmula bien formada de una teoría $T$, entonces si $P$, puede ser deducible del conjunto vacío ,denotado $\vdash P$, se dice que $P$ es un teorema en $T$ o que es demostrable en $T$. Es decir, en la secuencia de $P_i$ solo aparecen instancias de axiomas o son el resultado de aplicación de reglas de inferencia de $T$.
 
->[!tldr] Propiedades de la Deducción
->Sean $S_1$ y $S_2$ conjuntos de formulas bien formadas, y $P$ y $Q$ formulas bien formadas de una teoría $T$, entonces:
+>[!tldr] Propiedad de Monotonicidad
+>Sean $S_1$ y $S_2$ conjuntos de fórmulas bien formadas, y $P$ y $Q$ fórmulas bien formadas de una teoría $T$, entonces:
 >- Si $S_1$ es un subconjunto de $S_2$ y, $S_1 \vdash P$, entonces $S_2 \vdash P$ (Monotonicidad).
 >- $S_2 \vdash P$ si y solo si existe un subconjunto finito $S_1$ de $S_2$, tal que $S_1 \vdash P$ (Compacidad).
->- Si $S_2 \vdash P$ y para cada formula bien formada $Q$ en $S_2$ se cumple que $S_1 \vdash Q$, entonces $S_1 \vdash P$. (Modularidad).
+>- Si $S_2 \vdash P$ y para cada fórmula bien formada $Q$ en $S_2$ se cumple que $S_1 \vdash Q$, entonces $S_1 \vdash P$. (Modularidad).
 
 #### Interpretación y Modelos Semánticos
 
