--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
@@ -112,3 +112,25 @@ Por último la ***trama de gestión*** se utilizan para gestionar las comunicaci
 
 ## Redes de Área Local Virtuales (VLAN)
 
+En la actualidad muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien en un mundo ideal, este tipo de redes presentan una serie de desventajas:
+
+- **Falta de aislamiento del tráfico**. Aunque la jerarquía localiza el tráfico del grupo dentro de un mismo conmutador, el tráfico de difusión tienen que atravesar toda la red institucional. Limitar el ámbito del tráfico de difusión mejoraría el rendimiento de la LAN. Quizá más importante, sería también deseable limitar el tráfico de difusión de la LAN por razones de seguridad y confidencialidad.
+- **Uso ineficiente de los conmutadores**. Si una institución tiene 10 grupos, entonces se necesitarían 10 conmutadores de primer nivel. Si cada uno de los grupos es pequeño, entonces un único conmutador con los puertos suficientes para acomodar a todo el mundo, pero este único conmutador no proporcionaría la funcionalidad de aislamiento del tráfico.
+- **Gestión de los usuarios**. Si un empleado se mueve entre grupos, el cableado físico debe modificarse para conectar al empleado a un conmutador diferente, esto se torna más complejo si los empleados pertenecen dos o más grupos.
+
+Afortunadamente, cada una de estas desventajas puede ser abordada mediante el uso de conmutadores compatibles con _**redes de área local virtuales (VLAN)**_. Estos conmutadores permiten definir múltiples VLAN sobre una única infraestructura física de red de área local.
+En una VLAN basada en puertos, el administrador de la red divide las interfaces del conmutador en grupos. Cada grupo constituye una VLAN, donde los puertos de cada VLAN forman un dominio de difusión. Con esta configuración, solo los dispositivos pertenecientes al mismo grupo recibirán los mensajes de difusión, aislando así el tráfico interno de la organización.
+Debido a este aislamiento, es imposible intercambiar tráfico entre los distintos grupos de la red. Este inconveniente se resuelve conectando una de las interfaces de cada grupo a un router, que se encargará de redirigir el tráfico entre VLAN. Afortunadamente, muchos conmutadores modernos ya incluyen un router integrado que gestiona el redireccionamiento entre VLAN.
+Un aspecto interesante de las VLAN es que permiten que dispositivos ubicados en diferentes edificios pertenezcan a la misma red virtual. Esto se logra interconectando los distintos conmutadores VLAN mediante la técnica conocida como _**troncalización VLAN (VLAN Trunking)**_. Esta técnica configura una interfaz como troncal, la cual conecta ambos conmutadores VLAN. El puerto troncal pertenece a todas las VLAN, y las tramas enviadas a cualquier VLAN son reenviadas a través del enlace troncal hacia el otro conmutador.
+Un desafío que surge en este escenario es identificar a qué VLAN pertenece una trama cuando se envía a través del enlace troncal. Para solucionar esto, el estándar IEEE define un formato de trama Ethernet extendido, que incluye la trama Ethernet estándar más una _**etiqueta VLAN**_ de 4 bytes añadida a la cabecera de la trama. 
+
+![[trama-con-tpid.png]]
+
+Esta etiqueta identifica la VLAN a la que está destinada la trama. Al enviar una trama a través del enlace troncal, el conmutador emisor agrega la etiqueta VLAN a la trama, y al llegar a destino, la etiqueta es analizada y eliminada por el conmutador receptor.
+
+>[!tldr] Tag Protocol Identifier (TPID)
+>La etiqueta VLAN se compone de los siguientes campos:
+>
+>- **Identificador de Protocolo de Etiquetado (TPID)**: Campo de 2 bytes, con un valor hexadecimal fijo de 81-00.
+>- **Control de Etiquetado (Tag Control Information)**: Campo de 2 bytes, el cual incluye un campo identificador de VLAN de 12 bits y un campo de prioridad de 3 bits, cuya función es similar a la del campo TOS en los datagramas IP.
+
