[Refactor] corrections in 5.5 in redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/5. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/5. Medios de Transmision y Hardware de Red.md
@@ -1,4 +1,4 @@
-En los sistemas de transmisión de datos, el medio de transmisión es el camino físico entre el transmisor y el receptor. Estos medios se pueden clasificar en ***guiados***, donde las ondas electromagnéticas se transmiten a través de un medio sólido, como por ejemplo un par trenzado de cobre, un cable coaxial o una fibra óptica. Y los ***no guiados***, donde la transmisión se realiza de forma inalámbrica a través de la atmósfera, el espacio exterior o el agua. Nosotros solo nos enfocaremos en los médios guiados porque son los que más cubre la materia.
+En los sistemas de transmisión de datos, el medio de transmisión es el camino físico entre el transmisor y el receptor. Estos medios se pueden clasificar en ***guiados***, donde las ondas electromagnéticas se transmiten a través de un medio sólido, como por ejemplo un par trenzado de cobre, un cable coaxial o una fibra óptica. Y los ***no guiados***, donde la transmisión se realiza de forma inalámbrica a través de la atmósfera, el espacio exterior o el agua. Nosotros solo nos enfocaremos en los medios guiados porque son los que más cubre la materia.
 Las características y calidad de la transmisión están determinadas tanto por el tipo de señal como por las características del medio. Generalmente, en el diseño de sistemas de transmisión es deseable que tanto la distancia como la velocidad de transmisión sean lo más grande posible. Hay una serie de factores relacionados con el medio de transmisión y con la señal que determinan tanto la distancia como la velocidad de transmisión, tales como el ancho de banda, las dificultades en la transmisión, la interferencia y el número de receptores.
 
 ## Medios Guiados
@@ -60,8 +60,7 @@ En los medios no guiados, la transmisión y recepción se realizan mediante ante
 >[!tldr] Antenas Parabólicas de Reflexión
 >Un tipo muy importante de antenas son las denominadas antenas parabólicas de reflexión, las cuales se utilizan en aplicaciones de microondas terrestres y satelitales. Ya que, debido a su forma se verifica la siguiente propiedad: las ondas reflejadas en una parábola y que provengan de cualquier fuente de energía electromagnética que esté situada en su foco, seguirán trayectorias paralelas al eje de la parábola.
 
-La ***ganancia de una antena*** es una medida de su direccionalidad. Podemos definir dicha ganancia como la potencia de salida, en esa dirección, comparada con la potencia transmitida en cualquier dirección por una antena omnidirecional ideal.
-
+La ***ganancia de una antena*** es una medida de su direccionalidad. Podemos definir dicha ganancia como la potencia de salida, en esa dirección, comparada con la potencia transmitida en cualquier dirección por una antena omnidireccional ideal.
 ### Microondas Terrestres
 
 La antena más común en las microondas es la parabólica tipo plato, que posee un diámetro típico de unos 3 metros. Esta antena se fija rígidamente de forma tal que el haz debe estar perfectamente enfocado siguiendo la trayectoria visual hacia la antena receptora. Para conseguir transmisiones a larga distancia, se concatenan distintos enlaces punto a punto entre antenas situadas en torres adyacentes, hasta cubrir la distancia deseada.
