[Refactor] corrections in 5.5 in redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/5. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/5. Medios de Transmision y Hardware de Red.md
@@ -79,20 +79,20 @@ A diferencia de las microondas, las ondas de radio son menos afectadas por la ll
 
 Al momento de realizar el cableado e instalación de una red en un edificio, existen ciertos estándares que definen como realizar dicho cableado y qué medios de transmisión utilizar para cada caso en particular. Si bien todas estas especificaciones van de la mano de Ethernet, para realizar una instalación de este tipo de red también se utiliza hardware específico, como lo pueden ser repetidores, puentes, computadores y hasta enrutadores.
 
-### Repetidores
+### Repetidores (Repeaters)
 
 El principal problema tanto para los medios guiados como no guiados es el alcance que estos tienen, debido principalmente a la atenuación de las señales analógicas. Los repetidores son dispositivos de hardware, que se encuentran en el primer nivel del modelo OSI, capas de amplificar la señal entre dos segmentos de cables, permitiendo así la extensión de la señal a mayores distancia. Al ser un dispositivo ubicado en la capa física el mismo no entiende de tramas ni direcciones físicas, es un dispositivo que se encarga únicamente de replicar y amplificar señales eléctricas.
 
-### Puentes
+### Puentes (Bridges)
 
 Los puentes son dispositivos que sirve para interconectar segmentos de red formando una sola subred administrada por el mismo puente. Son piezas de hardware que tienen CPU, memoria y dos interfaces de red, situándose así en el segundo nivel del modelo OSI, la principal diferencia entre los puentes y los repetidores es que los puentes utilizan una interfaz de red y por eso son capaces de entender y manejar tramas, realizando algunas tareas como el filtraje de tráfico, el control de error de las tramas y además determinan a qué segmento de la red se debe ser enviada una trama.
 La motivación detrás del uso de los puentes es que también ayudan a extender la longitud de la red y por ende el número de nodos que la constituyen, permiten reducir el cuello de botella producido por tener muchos nodos generando tráfico sobre una sola línea, ya que los puentes pueden leer el campo de dirección de destino de las tramas, descartando aquellas tramas cuya dirección de destino y de origen sea el mismo segmento. Además de poder llevar un control de que estaciones están conectadas a la red local y a qué segmento pertenecen.
 
-### Conmutadores
+### Conmutadores (switches)
 
 Los conmutadores o switches son dispositivos que soporta múltiples segmentos y realiza el intercambio de tramas entre ellas mediante un bus de muy alta velocidad. A diferencia de los hubs y los switches toman decisiones basándose en las direcciones MAC evitando así la saturación del medio, se puede decir que switch administra de forma inteligente el ancho de banda. El propósito de este dispositivo es concentrar la conectividad, haciendo que la transmisión de datos sea más eficiente, conmutando las tramas desde las interfaces de entrada hacia los puertos de salida, dando a cada puerto el ancho de banda total.
 Tanto los conmutadores como los puentes tiene la capacidad de construir de forma automática sus tablas de direccionamiento, evitando así que los administradores y/o usuarios tengan que configurar el dispositivo de forma manual.
 Si bien tanto el switch como el puente pertenecen al segundo nivel del modelo OSI y comparten muchas similitudes, la principal diferencia es que los conmutadores realizan la conmutación de las tramas por hardware otorgando todo el ancho de banda a cada host para realizar la transmisión de las tramas evitando al máximo las colisiones, lo que permite tener muchos más nodos conectados de forma simultánea.
 
->[!tldr] Enrutadores
+>[!tldr] Enrutadores (routers)
 >Los routers son dispositivos de hardware que desempeñan funciones de nivel superior en la red. Ubicados en el tercer nivel del modelo OSI, son responsables de realizar el enrutamiento de paquetes y optimizar su dirección. Además, gestionan el control y filtrado del tráfico, mantienen tablas de routers adyacentes y de las redes LAN dentro de la red, y permiten segmentar la red en subredes.
