[Refactor] corrections in 5.3 in redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
@@ -14,8 +14,8 @@ Las redes LAN inalámbricas se clasifican, generalmente, de acuerdo con la técn
 - **Microondas de banda estrecha**: estas LAN operan en el rango de las microondas, pero no hacen uso de espectro expandido. Algunos de estos productos funcionan a frecuencias para las que es necesaria una licencia FCC, mientras que otras lo hacen en alguna de las bandas ISM.
 
 Si bien los infrarrojos permiten alcanzar velocidades de transmisión mucho más altas, la instalación es mucho más barata y pueden brindar cobertura a toda una habitación sin problemas alguno. No obstante estas ondas no pueden atravesar muros sólidos, sin mencionar que son muy susceptibles a los ruidos provocados por la luz natural y artificial, si bien esto se puede solucionar aumentando el rango de frecuencias a las que opera el infrarrojo estas deben ser limitadas de todas maneras debido a que puede dañar la vista y aumentar el consumo eléctrico del edificio. Por estas razones se utilizan mucho más los demás tecnologías de transmisión.
-Actualmente, las redes LAN inalámbricas más populares son aquellas que utilizan técnicas de espectro expandido. Este tipo de redes generalmente adoptan una disposición de celdas múltiples donde celdas adyacentes usan diferentes frecuencias para evitar interferencias, pudiendo adoptar una topología basada en concentradores, situados en lugares como el techo y conectados a LAN cableadas, o optar por una configuración entre iguales usando algoritmos MAC como CSMA para controlar el acceso. Los concentradores facilitan la conectividad entre redes y pueden controlar la transición de estaciones móviles entre celdas. Además, es deseable que estas redes operen sin necesidad de licencia.
-El término microondas de banda estrecha describe la utilización de una banda de frecuencias específica y limitada para la transmisión de voz, datos y vídeo, que hasta hace poco requería licencia. Motorola, con 600 licencias en EE.UU., controla la frecuencia de 18 GHz para asegurar comunicaciones sin interferencias entre redes LAN en áreas metropolitanas. Estas frecuencias son gestionadas por la FCC y están diseñadas para evitar interferencias entre sistemas geográficamente cercanos, utilizando configuraciones de celdas con bandas no solapadas. A diferencia de las bandas ISM no reguladas, las bandas con licencia ofrecen seguridad legal contra las interferencias.
+Actualmente, las redes LAN inalámbricas más populares son aquellas que utilizan técnicas de espectro expandido. Este tipo de redes generalmente adoptan una disposición de celdas múltiples donde celdas adyacentes usan diferentes frecuencias para evitar interferencias, pudiendo adoptar una topología basada en concentradores, situados en lugares como el techo y conectados a LAN cableadas, u optar por una configuración entre iguales usando algoritmos MAC como CSMA para controlar el acceso. Los concentradores facilitan la conectividad entre redes y pueden controlar la transición de estaciones móviles entre celdas. Además, es deseable que estas redes operen sin necesidad de licencia.
+El término microondas de banda estrecha describe la utilización de una banda de frecuencias específica y limitada para la transmisión de voz, datos y vídeo, que hasta hace poco requería licencia. Motorola, con 600 licencias en Estados Unidos, controla la frecuencia de 18 GHz para asegurar comunicaciones sin interferencias entre redes LAN en áreas metropolitanas. Estas frecuencias son gestionadas por la FCC y están diseñadas para evitar interferencias entre sistemas geográficamente cercanos, utilizando configuraciones de celdas con bandas no solapadas. A diferencia de las bandas ISM no reguladas, las bandas con licencia ofrecen seguridad legal contra las interferencias.
 
 ### Arquitectura y Servicios IEEE 802.11
 
@@ -83,7 +83,7 @@ Si bien existen tres tipos de tramas, el formato genérico de una trama MAC para
 - **Direcciones**: El número y significado de los campos de direcciones dependen del contexto. Los tipos de direcciones son la de la fuente, el destino, la estación transmisora y la estación receptora.
 - **Control de secuencia**: Contiene un subcampo de 4 bits utilizado para la fragmentación y el reensamblado, y un número de secuencia de 12 bits utilizado para numerar las tramas enviadas entre un transmisor dado y un receptor.
 - **Cuerpo de la trama**: Contiene una MSDU completa o un fragmento de la misma. La MSDU es una unidad de datos del protocolo LLC o información de control MAC.
-- ***Secuencia de comprobación de trama***: Se trata de una comprobación de redundancia cíclica de 32 bits.
+- **Secuencia de comprobación de trama**: Se trata de una comprobación de redundancia cíclica de 32 bits.
 
 #### Tipos de Trama 
 
