Refactoring y completando capa física | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -52,18 +52,18 @@ Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar fu
 >
 >En la mayor parte de los protocolos englobados por esta capa, es el mismo protocolo el responsable tanto de la detección de errores como de la recuperación de estos mismos a través de la solicitud de retransmisión de la trama errónea.
 
-### Técnicas de Control de Acceso al Medio
+## Técnicas de Control de Acceso al Medio
 
-#### ALOHA
+### ALOHA
 
 ***ALOHA*** es una técnica que permite a una estación enviar una trama siempre que esta lo necesite. Después de la transmisión, la estación escucha el medio para recibir una confirmación, lo que indicaría que la trama fue recibida correctamente. Si no se recibe confirmación, la estación retransmite la trama, y tras varios intentos fallidos, desiste. Una de las principales desventajas de esta técnica es la alta probabilidad de colisiones entre tramas, lo que limita la utilización máxima del canal a aproximadamente el 18%. Este problema se agrava a medida que aumenta la carga en la red. Existe una mejora denominada ALOHA ranurado que disminuye la posibilidad de colisión y aumenta el uso del canal a un 37%, aun así no es el mejor de los mecanismos de acceso existentes.
 
-#### Acceso Múltiple con Detección de Portadora (CSMA)
+### Acceso Múltiple con Detección de Portadora (CSMA)
 
 ***CSMA (Carrier Sense Multiple Access)*** es una técnica de acceso múltiple en la cual cuando una estación desea transmitir una trama, primero escucha el medio para detectar si hay alguna transmisión en curso (detección de portadora). Si el medio está ocupado, la estación espera, pero si está libre, transmite la trama. Sin embargo, si dos o más estaciones intentan transmitir al mismo tiempo, puede ocurrir una colisión, debido a que la señal portadora no ha logrado propagarse lo suficientemente rápido. Para gestionar este riesgo, la estación espera una confirmación tras la transmisión. Si no recibe la confirmación luego de cierto tiempo se asume que hubo una colisión y se retransmite la trama.
 La principal desventaja de CSMA es que, a pesar de reducir la probabilidad de colisiones, todavía pueden ocurrir colisiones, especialmente si varias estaciones intentan transmitir simultáneamente. Variantes como CSMA p-persistente pueden manejar cuidadosamente el valor de $p$ para evitar inestabilidades bajo alta carga, donde las colisiones repetidas pueden llevar a una caída significativa del rendimiento.
 
-#### Acceso Múltiple con Detección de Portadora con Detección de Colisiones (CSMA/CD)
+### Acceso Múltiple con Detección de Portadora con Detección de Colisiones (CSMA/CD)
 
 ***CSMA/CD (Carrier Sense Multiple Access with Collision Detection)*** es una versión mejorada de CSMA que permite a una estación transmitir solo si detecta que el medio está libre. Si el medio está ocupado, la estación espera. Si durante la transmisión se detecta una colisión, la estación envía una señal de interferencia para notificar a todas las estaciones de la colisión y detiene la transmisión. Luego, la estación espera un tiempo aleatorio antes de intentar retransmitir. Esta técnica reduce el tiempo desaprovechado al tiempo necesario para detectar una colisión, lo que mejora la eficiencia del uso del canal.
 La principal desventaja de CSMA/CD es que, si bien minimiza el tiempo perdido por colisiones, todavía puede experimentar inestabilidad en situaciones de alta carga, especialmente si se utilizan tramas cortas en comparación con el retardo de propagación. Para mitigar esto, se utiliza la técnica de ***espera exponencial binaria*** en redes como Ethernet, donde el tiempo de espera aumenta exponencialmente con cada intento fallido, ayudando a evitar que las colisiones repetidas lleven a la congestión de la red.
